# school_django_rest

./: .gitignore  Dockerfile  READme.md  docker-compose.yaml  example.env  pyproject.toml  requirements.txt
config/: settings.py  urls.py
school/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
school/management/commands/: add_payments.py
school/migrations/: 0001_initial.py  0002_alter_course_image.py  0003_alter_course_lessons.py  0004_alter_lesson_image.py  0005_alter_course_lessons.py  0006_alter_course_lessons.py  0007_alter_course_lessons.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_remove_user_username_payment.py  0003_user_username.py  0004_remove_user_username.py  0005_alter_payment_options.py  0006_alter_payment_date.py
